# multicell-state-dynamics

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
configs/: liver_velocity_cohort.json
docs/: cloud_velocity_runbook.md  liver_velocity_cloud_plan.md  liver_velocity_dataset_manifest.tsv  pre_experiment_assessment_and_risk_table.zh-CN.md  project2_velocity_coupling_summary.zh-CN.md  prototype_process_code_guide.zh-CN.md  roadmap.md  scp2154_phenotype_baseline.md  scp2154_velocity_coupling_interview_summary.zh-CN.md  stagewise_coupling_experiment_design.zh-CN.md  stromal_hepatocyte_malignant_remodeling_plan.zh-CN.md
scripts/: build_interview_figures.py  build_liver_velocity_input_manifest.py  check_gse149614_myeloid_signal.py  download_geo_supplementary.py  extract_geo_supplementary.py  inspect_gse185477.py  render_scp2154_stagewise_network_graph.py  run_gse149614_coupled_dynamics.py  run_gse149614_hcc_demo.py  run_gse149614_multi_sender_demo.py  run_gse185477_demo.py  run_scp2154_bidirectional_key_tests.py  run_scp2154_celltype_baselines.py  run_scp2154_chain_directionality.py  run_scp2154_coupling_driver_scan.py  run_scp2154_coupling_permutation.py  run_scp2154_directionality_test.py  run_scp2154_fixed_module_progression.py  run_scp2154_fixed_signature_tumor_validation.py  run_scp2154_leave_one_donor_out.py  run_scp2154_phenotype_baseline.py  run_scp2154_pretumor_coupling.py  run_scp2154_sender_comparison.py  run_scp2154_stagewise_bidirectional_network.py  run_scp2154_stagewise_velocity_coupling.py  run_scp2154_static_vs_dynamic_comparison.py  (+3 more)
(+16 files in other folders)
